Fix price overflow (out of range) bug

--- a/src/app/main-page/left-search-nav/price-range/price-range.component.scss
+++ b/src/app/main-page/left-search-nav/price-range/price-range.component.scss
@@ -47,6 +47,7 @@
       border-radius: $border-radius;
       background: #ddd;
       position: relative;
+      overflow-x: hidden;
   
       &__progress {
         height: 5px;
